Analyze variables change in relation

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -1882,6 +1882,23 @@
     "# Display the plot\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analyze how variables change in relation to each other over time\n",
+    "\n",
+    "- Higher CO₂ → Higher Global Temperatures (Recent years show increased CO₂ levels and rising temperatures).\n",
+    "- Higher CO₂ → Higher Sea Levels (Warming causes ice melt and ocean expansion).\n",
+    "- Higher CO₂ → Less Arctic Ice (Arctic ice area is shrinking as CO₂ levels rise).\n",
+    "- Higher Temperatures → Rising Sea Levels (Ice melting and thermal expansion lead to sea level rise).\n",
+    "- Higher Temperatures → Less Arctic Ice (Warmer climate accelerates Arctic ice loss).\n",
+    "- Higher Sea Levels → Less Arctic Ice (Melting ice contributes to rising sea levels).\n",
+    "\n",
+    "Conclusion:\n",
+    "Climate change is accelerating—CO₂ emissions drive warming, leading to ice loss and rising sea levels.\n"
+   ]
   }
  ],
  "metadata": {
