Relationship Among Global Temperatures, CO₂ Concentration, and Arctic Ice Area

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -1915,6 +1915,15 @@
     "- Expectation: Higher CO₂ concentration leads to an increase in global temperatures, which further contributes to rising sea levels.\n",
     "- Visualization: 3D scatter plot with CO₂ concentration (X-axis), Global Temperature (Y-axis), and Sea Level Rise (Z-axis).\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Relationship Among Global Temperatures, CO₂ Concentration, and Arctic Ice Area\n",
+    "- Expectation: Higher CO₂ levels contribute to global warming, causing a reduction in Arctic ice area.\n",
+    "- Visualization: 3D scatter plot with CO₂ concentration (X-axis), Global Temperature (Y-axis), and Arctic Ice Area (Z-axis).\n"
+   ]
   }
  ],
  "metadata": {
