Relationship Among CO₂ Concentration, Sea Level Rise, and Arctic Ice Area

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -1924,6 +1924,17 @@
     "- Expectation: Higher CO₂ levels contribute to global warming, causing a reduction in Arctic ice area.\n",
     "- Visualization: 3D scatter plot with CO₂ concentration (X-axis), Global Temperature (Y-axis), and Arctic Ice Area (Z-axis).\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Relationship Among CO₂ Concentration, Sea Level Rise, and Arctic Ice Area\n",
+    "Expectation:\n",
+    "- Increasing CO₂ concentration leads to rising sea levels and melting Arctic ice.\n",
+    "- Arctic ice area will show an inverse relationship with CO₂ concentration and sea level rise.\n",
+    "- Visualization: 3D scatter plot with CO₂ concentration (X-axis), Sea Level Rise (Y-axis), and Arctic Ice Area (Z-axis).\n"
+   ]
   }
  ],
  "metadata": {
