Relationship Among Global Temperatures, Sea Level Rise, and Arctic Ice Area

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -1930,11 +1930,27 @@
    "metadata": {},
    "source": [
     "3. Relationship Among CO₂ Concentration, Sea Level Rise, and Arctic Ice Area\n",
-    "Expectation:\n",
+    "  Expectation:\n",
     "- Increasing CO₂ concentration leads to rising sea levels and melting Arctic ice.\n",
     "- Arctic ice area will show an inverse relationship with CO₂ concentration and sea level rise.\n",
-    "- Visualization: 3D scatter plot with CO₂ concentration (X-axis), Sea Level Rise (Y-axis), and Arctic Ice Area (Z-axis).\n"
+    "  Visualization: 3D scatter plot with CO₂ concentration (X-axis), Sea Level Rise (Y-axis), and Arctic Ice Area (Z-axis).\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Relationship Among Global Temperatures, Sea Level Rise, and Arctic Ice Area\n",
+    "  Expectation:\n",
+    "- Rising global temperatures contribute to sea level rise.\n",
+    "- Arctic ice area will decrease as temperatures rise.\n",
+    "  Visualization: 3D scatter plot with Global Temperature (X-axis), Sea Level Rise (Y-axis), and Arctic Ice Area (Z-axis).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
