3D scattered plot created

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -1253,6 +1253,39 @@
     "# Display animation in Jupyter Notebook\n",
     "HTML(ani.to_jshtml())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3D scattered plot for CO2 concentration vs Global average temperature over time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3D scattered plot \n",
+    "\n",
+    "\n",
+    "# Create the 3D plot\n",
+    "fig = plt.figure(figsize=(8, 6))\n",
+    "ax = fig.add_subplot(projection='3d')\n",
+    "\n",
+    "# Scatter plot in 3D\n",
+    "ax.scatter(years, meanGlobaltemp, meanCo2_concentration, c=years, cmap='viridis', marker= 'o', edgecolors='k')\n",
+    "\n",
+    "# Labels and title\n",
+    "ax.set_xlabel('Year')\n",
+    "ax.set_ylabel('Global Avg Temp (°C)')\n",
+    "ax.set_zlabel('CO2 Concentration (ppm)')\n",
+    "ax.set_title('Global Temp Trends vs CO2 Concentration over Time- 3D scatter plot')\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
