--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -2425,6 +2425,19 @@
     "## 1. Introduction\n",
     "Climate change is a complex phenomenon influenced by multiple interrelated indicators. This document analyzes the relationships between global temperature, CO2 concentration, sea level rise, and Arctic ice area using statistical correlations and summary statistics. By examining these indicators, we aim to understand their trends and interactions over time.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Correlation Analysis (Anita)\n",
+    "The correlation matrix provides insight into how different climate indicators are related:\n",
+    "\n",
+    "- *Global Temperature & CO2 Concentration*: A near-zero correlation (-0.0014) suggests no direct linear relationship, but other external factors may influence their trends.\n",
+    "- *CO2 Concentration & Sea Level Rise*: A weak positive correlation (0.0002) indicates a minor connection, possibly due to delayed effects of CO2 increase on ocean expansion.\n",
+    "- *Sea Level Rise & Arctic Ice Area*: A positive correlation (0.0008) suggests some relationship, as melting ice contributes to rising sea levels.\n",
+    "- *Global Temperature & Arctic Ice Area*: A weak positive correlation (0.0007) implies that temperature changes slightly affect ice area fluctuations.\n"
+   ]
   }
  ],
  "metadata": {
