Multivariate-Documentation-phase3

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -2423,20 +2423,25 @@
     "# Discussion on complex patterns and interactions between climate indicators\n",
     "\n",
     "## 1. Introduction\n",
-    "Climate change is a complex phenomenon influenced by multiple interrelated indicators. This document analyzes the relationships between global temperature, CO2 concentration, sea level rise, and Arctic ice area using statistical correlations and summary statistics. By examining these indicators, we aim to understand their trends and interactions over time.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Correlation Analysis (Anita)\n",
+    "Climate change is a complex phenomenon influenced by multiple interrelated indicators. This document analyzes the relationships between global temperature, CO2 concentration, sea level rise, and Arctic ice area using statistical correlations and summary statistics. By examining these indicators, we aim to understand their trends and interactions over time.\n",
+    "\n",
+    "## 2. Correlation Analysis\n",
     "The correlation matrix provides insight into how different climate indicators are related:\n",
     "\n",
     "- *Global Temperature & CO2 Concentration*: A near-zero correlation (-0.0014) suggests no direct linear relationship, but other external factors may influence their trends.\n",
     "- *CO2 Concentration & Sea Level Rise*: A weak positive correlation (0.0002) indicates a minor connection, possibly due to delayed effects of CO2 increase on ocean expansion.\n",
     "- *Sea Level Rise & Arctic Ice Area*: A positive correlation (0.0008) suggests some relationship, as melting ice contributes to rising sea levels.\n",
-    "- *Global Temperature & Arctic Ice Area*: A weak positive correlation (0.0007) implies that temperature changes slightly affect ice area fluctuations.\n"
+    "- *Global Temperature & Arctic Ice Area*: A weak positive correlation (0.0007) implies that temperature changes slightly affect ice area fluctuations.\n",
+    "\n",
+    "\n",
+    "## 3. Descriptive Statistics\n",
+    "Examining the dataset’s statistical summary:\n",
+    "\n",
+    "- *Global Temperature*: Mean temperature is 14.5°C, with a slight increase over time.\n",
+    "- *CO2 Concentration*: Averages at 350 ppm, ranging from 280 ppm to 420 ppm, showing a rising trend.\n",
+    "- *Sea Level Rise*: Mean level is 150 mm, with a maximum of 300 mm, indicating gradual elevation.\n",
+    "- *Arctic Ice Area*: Averages at 9 million km², ranging from 3 to 15 million km², highlighting seasonal and      \n",
+    "    long-term reductions.\n"
    ]
   }
  ],
