multivariate documentation phase 3

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -2440,8 +2440,14 @@
     "- *Global Temperature*: Mean temperature is 14.5°C, with a slight increase over time.\n",
     "- *CO2 Concentration*: Averages at 350 ppm, ranging from 280 ppm to 420 ppm, showing a rising trend.\n",
     "- *Sea Level Rise*: Mean level is 150 mm, with a maximum of 300 mm, indicating gradual elevation.\n",
-    "- *Arctic Ice Area*: Averages at 9 million km², ranging from 3 to 15 million km², highlighting seasonal and      \n",
-    "    long-term reductions.\n"
+    "- *Arctic Ice Area*: Averages at 9 million km², ranging from 3 to 15 million km², highlighting seasonal and     long-term reductions.\n",
+    "\n",
+    "## 4. Key Observations \n",
+    "- Over time, *CO2 levels have increased*, aligning with global temperature rise.\n",
+    "- *Arctic ice area shows a decreasing trend*, likely due to warming temperatures.\n",
+    "- *Sea level rise is gradual*, likely influenced by melting ice and thermal expansion.\n",
+    "- *Weak correlations suggest complex interactions*, requiring further non-linear analysis.\n",
+    "\n"
    ]
   }
  ],
