Multivariate Documentation Final Phase

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -2422,31 +2422,36 @@
    "source": [
     "# Discussion on complex patterns and interactions between climate indicators\n",
     "\n",
-    "## 1. Introduction\n",
-    "Climate change is a complex phenomenon influenced by multiple interrelated indicators. This document analyzes the relationships between global temperature, CO2 concentration, sea level rise, and Arctic ice area using statistical correlations and summary statistics. By examining these indicators, we aim to understand their trends and interactions over time.\n",
+    "Introduction\n",
     "\n",
-    "## 2. Correlation Analysis\n",
-    "The correlation matrix provides insight into how different climate indicators are related:\n",
+    "    Climate change is a complex phenomenon influenced by multiple interrelated indicators. This document analyzes the relationships between global temperature, CO2 concentration, sea level rise, and Arctic ice area using statistical correlations and summary statistics. By examining these indicators, we aim to understand their trends and interactions over time.\n",
     "\n",
-    "- *Global Temperature & CO2 Concentration*: A near-zero correlation (-0.0014) suggests no direct linear relationship, but other external factors may influence their trends.\n",
-    "- *CO2 Concentration & Sea Level Rise*: A weak positive correlation (0.0002) indicates a minor connection, possibly due to delayed effects of CO2 increase on ocean expansion.\n",
-    "- *Sea Level Rise & Arctic Ice Area*: A positive correlation (0.0008) suggests some relationship, as melting ice contributes to rising sea levels.\n",
-    "- *Global Temperature & Arctic Ice Area*: A weak positive correlation (0.0007) implies that temperature changes slightly affect ice area fluctuations.\n",
+    "- Correlation Analysis\n",
+    "    The correlation matrix provides insight into how different climate indicators are related:\n",
+    "\n",
+    "    - *Global Temperature & CO2 Concentration*: A near-zero correlation (-0.0014) suggests no direct linear relationship, but other external factors may influence their trends.\n",
+    "    - *CO2 Concentration & Sea Level Rise*: A weak positive correlation (0.0002) indicates a minor connection, possibly due to delayed effects of CO2 increase on ocean expansion.\n",
+    "    - *Sea Level Rise & Arctic Ice Area*: A positive correlation (0.0008) suggests some relationship, as melting ice contributes to rising sea levels.\n",
+    "    - *Global Temperature & Arctic Ice Area*: A weak positive correlation (0.0007) implies that temperature changes slightly affect ice area fluctuations.\n",
     "\n",
     "\n",
-    "## 3. Descriptive Statistics\n",
-    "Examining the dataset’s statistical summary:\n",
+    "- Descriptive Statistics\n",
+    "    Examining the dataset’s statistical summary:\n",
     "\n",
-    "- *Global Temperature*: Mean temperature is 14.5°C, with a slight increase over time.\n",
-    "- *CO2 Concentration*: Averages at 350 ppm, ranging from 280 ppm to 420 ppm, showing a rising trend.\n",
-    "- *Sea Level Rise*: Mean level is 150 mm, with a maximum of 300 mm, indicating gradual elevation.\n",
-    "- *Arctic Ice Area*: Averages at 9 million km², ranging from 3 to 15 million km², highlighting seasonal and     long-term reductions.\n",
+    "    - *Global Temperature*: Mean temperature is 14.5°C, with a slight increase over time.\n",
+    "    - *CO2 Concentration*: Averages at 350 ppm, ranging from 280 ppm to 420 ppm, showing a rising trend.\n",
+    "    - *Sea Level Rise*: Mean level is 150 mm, with a maximum of 300 mm, indicating gradual elevation.\n",
+    "    - *Arctic Ice Area*: Averages at 9 million km², ranging from 3 to 15 million km², highlighting seasonal and     long-term reductions.\n",
     "\n",
-    "## 4. Key Observations \n",
-    "- Over time, *CO2 levels have increased*, aligning with global temperature rise.\n",
-    "- *Arctic ice area shows a decreasing trend*, likely due to warming temperatures.\n",
-    "- *Sea level rise is gradual*, likely influenced by melting ice and thermal expansion.\n",
-    "- *Weak correlations suggest complex interactions*, requiring further non-linear analysis.\n",
+    "- Key Observations \n",
+    "    - Over time, *CO2 levels have increased*, aligning with global temperature rise.\n",
+    "    - *Arctic ice area shows a decreasing trend*, likely due to warming temperatures.\n",
+    "    - *Sea level rise is gradual*, likely influenced by melting ice and thermal expansion.\n",
+    "    - *Weak correlations suggest complex interactions*, requiring further non-linear analysis.\n",
+    "\n",
+    "Conclusion:\n",
+    "\n",
+    "    While the correlations are weak, long-term trends indicate significant climate changes. Further studies incorporating non-linear models and additional influencing factors may improve understanding. This documentation serves as a foundational step in assessing climate patterns and their interactions\n",
     "\n"
    ]
   }
