Conclusion-key stats findings

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -2454,11 +2454,48 @@
     "    While the correlations are weak, long-term trends indicate significant climate changes. Further studies incorporating non-linear models and additional influencing factors may improve understanding. This documentation serves as a foundational step in assessing climate patterns and their interactions\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion and Insights\n",
+    "\n",
+    "### **1. Key Statistical Findings**\n",
+    "\n",
+    "- **1.1 Global Average Temperature (°C)**\n",
+    "    - **Mean**: 14.5°C  \n",
+    "    - **Median**: 14.5°C  \n",
+    "    - **Range**: 3.0°C (Min: 13.0°C, Max: 16.0°C)  \n",
+    "    - **Standard Deviation**: 0.87°C  \n",
+    "    - **Trend**: A subtle warming trend is noticeable over recent decades, although year-to-year variability remains moderate.  \n",
+    "\n",
+    "- **1.2 CO₂ Concentration (ppm)**\n",
+    "    - **Mean**: 350.03 ppm  \n",
+    "    - **Median**: 350.07 ppm  \n",
+    "    - **Range**: 140 ppm (Min: 280 ppm, Max: 420 ppm)  \n",
+    "    - **Standard Deviation**: 40.42 ppm  \n",
+    "    - **Trend**: A clear and persistent rise in CO₂ levels has been observed over time, correlating with industrialization and increased fossil fuel consumption.  \n",
+    "\n",
+    "- **1.3 Arctic Ice Area (million km²)**\n",
+    "    - **Mean**: 9.0 million km²  \n",
+    "    - **Median**: 9.2 million km²  \n",
+    "    - **Range**: 12.0 million km² (Min: 3.0 million km², Max: 15.0 million km²)  \n",
+    "    - **Standard Deviation**: 2.5 million km²  \n",
+    "    - **Trend**: A sharp decline in Arctic ice coverage is evident, with recent decades experiencing accelerated melting. The loss is estimated at approximately **13% per decade**.  \n",
+    "\n",
+    "- **1.4 Sea Level Rise (mm)**\n",
+    "    - **Mean**: 150 mm  \n",
+    "    - **Median**: 145 mm  \n",
+    "    - **Range**: 150 mm (Min: 0 mm, Max: 300 mm)  \n",
+    "    - **Standard Deviation**: 30.4 mm  \n",
+    "    - **Trend**: A consistent increase in sea levels has been recorded, with an estimated rise of **3.3 mm per year over the past 30 years**."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2472,7 +2509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
