--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -2489,7 +2489,18 @@
     "    - **Median**: 145 mm  \n",
     "    - **Range**: 150 mm (Min: 0 mm, Max: 300 mm)  \n",
     "    - **Standard Deviation**: 30.4 mm  \n",
-    "    - **Trend**: A consistent increase in sea levels has been recorded, with an estimated rise of **3.3 mm per year over the past 30 years**."
+    "    - **Trend**: A consistent increase in sea levels has been recorded, with an estimated rise of **3.3 mm per year over the past 30 years**.\n",
+    "\n",
+    "### **2. Statistical Correlations & Relationships**\n",
+    "\n",
+    "A correlation matrix was generated to evaluate relationships between climate indicators:  \n",
+    "\n",
+    "| Climate Variable Pair          | Correlation Coefficient (r) | Interpretation |\n",
+    "|--------------------------------|----------------------------|---------------|\n",
+    "| **CO₂ Concentration & Temperature**  | -0.0014 | No direct linear relationship |\n",
+    "| **CO₂ Concentration & Sea Level Rise**  | 0.0002 | Weak positive correlation |\n",
+    "| **Sea Level Rise & Arctic Ice Area**  | 0.0008 | Weak positive correlation |\n",
+    "| **Global Temperature & Arctic Ice Area**  | 0.0007 | Weak positive correlation |"
    ]
   }
  ],
