Conclusion-Implications of observed Trends

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -2503,7 +2503,15 @@
     "| **Global Temperature & Arctic Ice Area**  | 0.0007 | Weak positive correlation |\n",
     "\n",
     "- Despite weak direct correlations, multivariate and time-series analysis suggest **CO₂ concentration is a major driver of global temperature rise**, which in turn accelerates sea level rise and Arctic ice loss.  \n",
-    "- The absence of strong linear relationships implies **a need for non-linear modeling approaches** to fully understand climate interactions.  \n"
+    "- The absence of strong linear relationships implies **a need for non-linear modeling approaches** to fully understand climate interactions.  \n",
+    "\n",
+    "### **3. Implications of Observed Trends**\n",
+    "\n",
+    "- Rising Global Temperatures → Increased heatwaves, droughts, and extreme weather events.  \n",
+    "- Increasing CO₂ Levels → More greenhouse gas effects, leading to continued warming.  \n",
+    "- Shrinking Arctic Ice → Disruptions in ocean currents, loss of habitats, and increased coastal flooding.  \n",
+    "- Rising Sea Levels → Threatens coastal infrastructure, increases flood risks, and affects millions globally.   \n",
+    "\n"
    ]
   }
  ],
