--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -2511,13 +2511,19 @@
     "- Increasing CO₂ Levels → More greenhouse gas effects, leading to continued warming.  \n",
     "- Shrinking Arctic Ice → Disruptions in ocean currents, loss of habitats, and increased coastal flooding.  \n",
     "- Rising Sea Levels → Threatens coastal infrastructure, increases flood risks, and affects millions globally.   \n",
-    "\n"
+    "\n",
+    "### **4. Areas for Further Investigation**\n",
+    "\n",
+    "- **Non-Linear Climate Modeling** – Machine learning approaches to better capture interdependencies between variables.  \n",
+    "- **Regional Climate Analysis** – Assessing how trends vary by continent or latitude.  \n",
+    "- **Extreme Weather Event Correlation** – Linking climate indicators to hurricanes, wildfires, and drought patterns.  \n",
+    "- **Socioeconomic Impact Studies** – Evaluating climate change effects on agriculture, health, and migration."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2531,7 +2537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
