--- a/starter-notebook.ipynb
+++ b/starter-notebook.ipynb
@@ -22,12 +22,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "# Set plot styling\n",
-    "plt.style.use('seaborn-whitegrid')\n",
-    "sns.set_palette('viridis')\n",
-    "%matplotlib inline"
+    "import seaborn as sns"
    ]
   },
   {
@@ -168,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
